argocd/apps/ytdl/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f ytdl.yaml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: ytdl
  name: ytdl
spec:
  ports:
    - name: "8998"
      port: 8998
      targetPort: 17442
  selector:
    io.kompose.service: ytdl
---
apiVersion: v1
kind: Service
metadata:
  name: ytdl-mongo-db
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: ytdl-mongo-db
