argocd/apps/ytdl/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: ytdl-app
  name: ytdl-httproute
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - ytdl.yanello.net
  rules:
  - backendRefs:
    - name: ytdl
      port: 17442
