argocd/apps/ytdl/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ytdl
  namespace: ytdl
spec:
  ingressClassName: nginx
  rules:
    - host: ytdl.yanello.net
      http:
        paths:
          - backend:
              service:
                name: ytdl
                port:
                  number: 8998
            path: /
            pathType: Prefix
