argocd/apps/ytdl/manifests/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ytdl
spec:
  hosts:
    - ytdl.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: ytdl
            port:
              number: 17442
